--- a/index.html
+++ b/index.html
@@ -37,53 +37,65 @@
         </nav>
     </header>
 
-    <main class="container">
-        <secton class="introduction">
-            <div class="vh-100 d-flex flex-column justify-content-center align-items-center text-center">
-                <!-- <img class="rounded-circle shadow-lg" src="" alt=""> -->
-                <p class="fs-4 mt-3">Hi, I'm Varun Nlv</p>
-                <p class="fs-4 fw-bold mb-1">Building web applications</p>
-                <p class="mb-4">Java and Spring Boot Framework for backend // JavaScript and React for frontend</p>
-                <a href="#contact">
-                    <button type="button" class="btn btn-dark">CONNECT WITH ME</button>
-                </a>
+    <main class="container-fluid">   
+
+        <section class="introduction">
+            <div class="bgAnimation" id="bgAnimation">
+                <div class="backgroundAmim"></div>
             </div>
-        </secton>
-        <section class="about">
-            <div class="row">
-                <div class="col-md-6 text-center my-3">
-                    <img class="w-75" src="./media/blog-writing.png" alt="">
-                </div>
-                <div class="col-md-6">
-                    <p class="fs-2 fw-bold">About Me</p>
-                    <p></p>
-                    <a href="./projects.html">
-                        <button type="button" class="btn btn-dark">GO TO PROJECTS</button>
+            <div class="content-overlay">
+                <div class="maintext vh-100 d-flex flex-column justify-content-center align-items-center text-center">
+                    <p class="fs-4 mt-3">Hi, I'm Varun Nlv</p>
+                    <p class="fs-4 fw-bold mb-1">Building web applications</p>
+                    <p class="mb-4">Java and Spring Boot Framework for backend // JavaScript and React for frontend</p>
+                    <a href="#contact">
+                        <button type="button" class="btn btn-dark">CONNECT WITH ME</button>
                     </a>
                 </div>
             </div>
         </section>
-        <section class="contact" id="contact">
-            <div class="d-flex flex-column align-items-center justify-content-center text-center">
-                <p class="fs-2 fw-bold">Let's Talk!</p>
-                <ul class="d-flex flex-row list-unstyled">
-                    <li class="px-2">
-                        <a href="" target="_blank">
-                            <i class="bi bi-linkedin"></i>
+        
+        <section class="about">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 text-center my-3">
+                        <img class="w-75" src="./media/blog-writing.png" alt="">
+                    </div>
+                    <div class="col-md-6">
+                        <p class="fs-2 fw-bold">Projects</p>
+                        <p>Detailed explanation of projects with features,learning outcomes and technologies used</p>
+                        <a href="./projects.html">
+                            <button type="button" class="btn btn-dark">GO TO PROJECTS</button>
                         </a>
-                    </li>           
-                    <li class="px-2">
-                        <a href="" target="_blank">
-                            <i class="bi bi-github"></i>
-                        </a>
-                    </li>
-                </ul>
-                <p>Or write to me at<br>Varun.netinti@gmail.com</p>
+                    </div>
+                </div>
             </div>
         </section>
+        
+        <section class="contact" id="contact">
+            <div class="container">
+                <div class="d-flex flex-column align-items-center justify-content-center text-center">
+                    <p class="fs-2 fw-bold">Let's Talk!</p>
+                    <ul class="d-flex flex-row list-unstyled">
+                        <li class="px-2">
+                            <a href="#" target="_blank">
+                                <i class="bi bi-linkedin"></i>
+                            </a>
+                        </li>
+                        <li class="px-2">
+                            <a href="#" target="_blank">
+                                <i class="bi bi-github"></i>
+                            </a>
+                        </li>
+                    </ul>
+                    <p>Or write to me at<br>Varun.netinti@gmail.com</p>
+                </div>
+            </div>
+        </section>
+
     </main>
 
-    <footer class="bg-light pt-4 pb-2">
+    <footer class="bg-light pt-4 pb-2 mt-2" >
         <div class="container d-flex flex-wrap">
             <p class="fs-4 fw-bold pe-4">Nlv Varun</p>
             <div class="d-flex flex-grow-1 justify-content-between align-items-center flex-wrap">
@@ -112,6 +124,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+    <script src="./script.js"></script>
 
 </body>
 
